[package]
name = "apollo-11"
version = "0.1.0"
edition = "2024"

[profile.dev.package.full_moon]
opt-level = 3

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
full_moon = { version = "1.2.0", features = ["luau", "serde"] }
hyper = { version = "1.6.0", features = ["server"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
